# aulavirtual-ia-taws

./: .env.example  AGENTE_JELOU.md  CLAUDE.md  Dockerfile  README.md  TODO.md  VALIDADOR_JELOU.md  agent.py  canvas_client.py  config.py  main.py  mcp_server.py  pyproject.toml  railway.toml  requirements.txt  token_manager.py
scripts/: test_token.py
